# storage/api-docs/api-docs.json
@@ -6,6 +6,87 @@
         "version": "0.0.1"
     },
     "paths": {
+        "/api/login": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Authenticate user and generate a token",
+                "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "password": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "allOf": [
+                                        {
+                                            "$ref": "#components/schemas/token"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid user"
+                    }
+                }
+            }
+        },
+        "/api/logout": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Log out and delete user token",
+                "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "password": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Invalid user"
+                    }
+                }
+            }
+        },
         "/api/profile/index": {
             "get": {
                 "tags": [
@@ -193,7 +274,12 @@
                     "401": {
                         "description": "Unauthenticated"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "0": "bearerAuth:{}"
+                    }
+                ]
             }
         },
         "/api/profile/{id}/destroy": {
@@ -378,7 +464,12 @@
                     "401": {
                         "description": "Unauthenticated"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "0": "bearerAuth:{}"
+                    }
+                ]
             }
         },
         "/api/user/{id}/show": {
@@ -453,6 +544,21 @@
     },
     "components": {
         "schemas": {
+            "token": {
+                "title": "token",
+                "description": "token",
+                "required": [
+                    "token"
+                ],
+                "properties": {
+                    "token": {
+                        "description": "Token for authentication",
+                        "type": "string",
+                        "format": "string"
+                    }
+                },
+                "type": "object"
+            },
             "profile": {
                 "title": "profile",
                 "description": "profile schema",
@@ -509,9 +615,21 @@
             "422": {
                 "description": "unprocessable content"
             }
+        },
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "description": "Token to authenticate users",
+                "in": "header",
+                "scheme": "Bearer"
+            }
         }
     },
     "tags": [
+        {
+            "name": "Auth",
+            "description": "Auth"
+        },
         {
             "name": "Profile",
             "description": "Profile"
